fixed some homepage aligning

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
   .homeSections {
     height: 70vh;
     width: 90%;
@@ -32,11 +33,11 @@
   }
 
   .Carousel {
-    height: 95vh;
+    height: 75vh;
     background-color: beige;
     .CarouselItem {
       position: relative;
-      height: 85vh;
+      height: 65vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -49,7 +50,7 @@
         justify-content: space-evenly;
         #carouselImages {
           width: 45%;
-          height: 500px;
+          height: 100%;
           animation: fadeInAnimation 1s;
         }
         aside {
@@ -78,6 +79,9 @@
     background-image: url(https://static.vecteezy.com/system/resources/previews/013/743/451/original/earth-doodle-continuous-line-freehand-drawing-free-png.png);
     background-size: cover;
     color: white;
+    h2 {
+      font-size: 30px;
+    }
   }
 }
 
